Delete style that doesn’t solve inspector button not showing bug

--- a/src/stylesheets/pages/partials/_inspector.scss
+++ b/src/stylesheets/pages/partials/_inspector.scss
@@ -20,7 +20,6 @@
     }
 
     @include below($sm-breakpoint) {
-      display: inline-block;
       width: 85%;
       margin: 20px 0;
       &.secondary-color {
